updated backend/Dockerfile and documentation